--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "html5-manifest",
   "version": "1.0.0",
   "dependencies": {
-    "coffee-script": "~1.3"
+    "coffee-script": "~1.3",
+    "async": "0.1.x",
+    "mkdirp": "0.3.x"
   }, 
 
   "main": "./index.js"
